--- a/src/component/header/styles.scss
+++ b/src/component/header/styles.scss
@@ -1,16 +1,18 @@
 @import '~antd/dist/antd.css';
+@import '.././colors.scss';
+@import '.././font-size.scss';
 body {
     margin: 0px;
-    background-color: #F0F0F1;
+    background-color: $body-background-color;
 }
 .header {
-    background-color:white;
+    background-color: $header-background-color;
     position: relative;
     z-index: 1;
     height: 54px;
     display: flex;
     justify-content: space-between;
-    box-shadow: 0 0px 8px 0 grey;
+    box-shadow: 0 0px 8px 0 $shadow-color-dark;
 }   
 .header .left {
     display: flex;
@@ -18,7 +20,7 @@ body {
     margin-left: 10px;
 }   
 .logo {
-    color: #4A90E2;
+    color: $logo-color;
     display: flex;
     align-items: center;
 }  
@@ -27,30 +29,30 @@ body {
     padding: 10px;
 }   
 .logo .app-name {
-    font-size: 25px;
+    font-size: $four-xl;
 }  
 .channel-selector {
     height: 34px;
     width: 300px;
     margin-left: 20px;
-    color: white !important;
-    font-size: 16px;
+    color: $text-color-light !important;
+    font-size: $lg;
     display: flex !important;
     justify-content: space-between !important;
     align-items: center !important;
 }
 .channel-selector:focus {
-    color: white !important;
+    color: $text-color-light !important;
 }
-.channel-selector .ant-select-selector {
+.channel-selector .ant-select-selector {    
     background-color: #13C2C2 !important;
     border-style: none;
     border-radius: 100px !important;
     border: none !important;
 }
 .channel-selector .ant-select-arrow {
-    color: white !important;
-    font-size: 14px;
+    color: $text-color-light !important;
+    font-size: $md;
 }
 .header .right {
     display: flex;
@@ -66,26 +68,26 @@ body {
     margin-right: 20px;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: $text-color-light;
 }   
 .noti-icon:hover {
-    background-color: #CEE5FF;
+    background-color: $background-hover-color;
 }   
 .new-noti {
     width: 16px;
     height: 16px;
     background-color: #FF4D4F;
-    color: white;
+    color: $text-color-light;
     border-radius: 100px;
-    font-size: 10px;
+    font-size: $sx;
     text-align: center;
     position: absolute;
     top: 10px;
     margin-left: 30px;
 }  
 .avatar {
-    color: #4A4B57;
-    font-size: 16px;
+    color: $text-color-dark;
+    font-size: $lg;
     font-weight: bold;
     padding-right: 10px;
 }
@@ -101,7 +103,7 @@ body {
         margin-left: unset;
     }  
     .select-button {
-        background-color: white;
+        background-color: $text-color-light;
         color: #13C2C2;
     }
 }
