--- a/src/component/workspace/style.scss
+++ b/src/component/workspace/style.scss
@@ -1,3 +1,8 @@
+@import '.././colors.scss';
+body {
+    margin: 0;
+    background-color: $body-background-color;;
+}
 .workspace {
     height: 1080px;
     width: 100%;
