--- a/src/component/colors.scss
+++ b/src/component/colors.scss
@@ -1,6 +1,7 @@
 //text
 $text-color-light: white;
 $text-color-dark: #4A4B57;
+$text-color-extreme-dark: #292A31;
 $text-hover-color: #2979FF;
 //background
 $background-hover-color: #CEE5FF;
@@ -14,4 +15,5 @@ $shadow-color-dark: grey;
 //border
 $border-color-light: #D2D2D6;
 //icon
-$icon-color-dark: #787885
+$icon-color-dark: #787885;
+$text-warning-color: #FF4D4F;
