--- a/src/component/workspace/workStream/styles.scss
+++ b/src/component/workspace/workStream/styles.scss
@@ -12,10 +12,11 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     .creation-box {
         width: 100%;
-        height: 136px;
+        height: fit-content;
         background-color: $header-background-color;
         display: inherit;
         flex-direction: column;
+        padding-bottom: 15px;   
         .box-heading {
             width: 100%;
             height: 62px;
@@ -42,6 +43,17 @@
                 font-size: $two-xl;
             }
         }
+        .search-box {
+            border: 1px solid #4F91FF;
+            width: 100%;
+            height: 40px;
+            &:hover {
+                outline: none;
+            }
+            &:focus {
+                outline: none;
+            }
+        }
         .add-work-item {
             margin-top: 10px;
             width: 90%;
@@ -52,6 +64,7 @@
                 border-bottom: 0.5px solid $text-hover-color;
             }
             .adding-box {
+                width: 95%;
                 align-items: center;
                 position: relative;
                 top: 5px;
@@ -93,6 +106,13 @@
         width: 90%;
         .item-card {
             @include item-card;
+            // &:visited {
+            //     background-color: $background-hover-color;
+            // }
+        }
+        .search-result {
+            font-size: $two-xl;
+            color: $text-color-dark;
         }
     }
 }
